--- a/ios/eWorld/Info.plist
+++ b/ios/eWorld/Info.plist
@@ -109,5 +109,8 @@
 <string>The camera is accessed for the first time</string>
 <key>NSMicrophoneUsageDescription</key>
 <string>The microphone is accessed for the first time</string>
+
+<key>NSSpeechRecognitionUsageDescription</key>
+<string>Description of why you require the use of the speech recognition</string>
 </dict>
 </plist>
