--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/voice": "^1.1.9",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
@@ -20,15 +21,18 @@
     "axios": "^1.5.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-audio-record": "^0.2.2",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-image-picker": "^7.0.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.5.1",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-sound": "^0.11.2",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.13.0",
     "react-native-vector-icons": "^10.0.0",
+    "react-native-voice": "^0.3.0",
     "react-native-waveview": "^1.1.0"
   },
   "devDependencies": {
